--- a/V_2/login.css
+++ b/V_2/login.css
@@ -9,6 +9,7 @@ body {
 }
 
 .form-container {
+    position: relative;
     background-color: #fff;
     padding: 80px;
     border-radius: 8px;
@@ -17,24 +18,11 @@ body {
 
 .close-btn {
     position: absolute;
-    top: 90px;
-    right: 550px;
+    top: 2%;
+    right: 3%;
     font-size: 20px;
     text-decoration: none;
     color: #000;
-}
-
-.close-bt {
-    position: absolute;
-    top: 50px;
-    right: 550px;
-    font-size: 20px;
-    text-decoration: none;
-    color: #000;
-}
-
-.close-bt:hover{
-    color: #ff0000;
 }
 
 .close-btn:hover {
