--- a/V_2/style-test.css
+++ b/V_2/style-test.css
@@ -212,3 +212,70 @@ text-decoration: none;
   position: absolute;
   width: 120%;
 }
+
+.go-to-cart {
+  display: none; 
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 999;
+  animation: slideIn 0.3s ease-out;
+}
+
+@keyframes slideIn {
+  from {
+      transform: translateX(100%); 
+  }
+  to {
+      transform: translateX(0); 
+  }
+}
+
+.go-to-cart a {
+  display: inline-block;
+  padding: 10px 20px; 
+  background-color: #007BFF;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px; 
+}
+
+.go-to-cart a:hover {
+  background-color: #0056b3;
+}
+
+.clear-cart {
+  display: none;
+  position: fixed;
+  bottom: 10px;
+  right: 180px;
+  z-index: 999;
+  animation: slideIn 0.3s ease-out;
+}
+
+.clear-cart a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #dc3545; /* Couleur rouge, vous pouvez la modifier */
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.clear-cart a:hover {
+  background-color: #bd2130; /* Rouge plus foncé au survol */
+}
+
+/* Affiche le bouton uniquement lorsque le panier est ouvert */
+#cart.open.clear-cart {
+  display: block;
+}
+
+#cartItemCount {
+  position: absolute;
+  top: 6px;
+  left: 23px;
+  color: black;
+  padding: 5px;
+  border-radius: 50%;
+}
