--- a/V_2/style.css
+++ b/V_2/style.css
@@ -70,7 +70,7 @@ to   { width:200px; }
 
 #searchbartop img {
 position: absolute; 
-top: 275%; 
+top: 274%; 
 right: 2550%; 
 width: 100%;
 height: auto;
@@ -212,3 +212,660 @@ text-decoration: none;
   position: absolute;
   width: 120%;
 }
+
+.liste-setups {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column; /* Ajuste cette propriété pour afficher les conteneurs en colonne */
+  align-items: center; /* Centre les éléments horizontalement dans le conteneur */
+}
+
+.cart {
+  position: fixed;
+  top: 0;
+  right: -300px; /* Initial position, panier caché hors de l'écran */
+  width: 300px;
+  height: 100%;
+  background-color: #f2f2f2;
+  padding: 20px;
+  overflow-y: auto;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  transition: right 0.3s ease; /* Ajout de la transition */
+  opacity: 0; /* Ajout de l'opacité initiale */
+}
+
+.cart.open {
+  right: 0; /* Position lorsque le panier est ouvert */
+  opacity: 1; /* Afficher le panier en ajustant l'opacité */
+}
+
+.cart .close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.cart ul {
+  list-style: none;
+  padding: 0;
+}
+
+/* Ajoutez d'autres styles selon vos besoins */
+
+.shop {
+position: absolute;
+left:88%;
+bottom:92%;
+}
+
+.shop img {
+position: absolute;
+width: 120%;
+}
+
+.go-to-cart {
+display: none; 
+position: fixed;
+bottom: 10px;
+right: 10px;
+z-index: 999;
+animation: slideIn 0.3s ease-out;
+}
+
+@keyframes slideIn {
+from {
+    transform: translateX(100%); 
+}
+to {
+    transform: translateX(0); 
+}
+}
+
+.go-to-cart a {
+display: inline-block;
+padding: 10px 20px; 
+background-color: #007BFF;
+color: white;
+text-decoration: none;
+border-radius: 5px; 
+}
+
+.go-to-cart a:hover {
+background-color: #0056b3;
+}
+
+.clear-cart {
+display: none;
+position: fixed;
+bottom: 10px;
+right: 180px;
+z-index: 999;
+animation: slideIn 0.3s ease-out;
+}
+
+.clear-cart a {
+display: inline-block;
+padding: 10px 20px;
+background-color: #dc3545; /* Couleur rouge, vous pouvez la modifier */
+color: white;
+text-decoration: none;
+border-radius: 5px;
+}
+
+.clear-cart a:hover {
+background-color: #bd2130; /* Rouge plus foncé au survol */
+}
+
+/* Affiche le bouton uniquement lorsque le panier est ouvert */
+#cart.open.clear-cart {
+display: block;
+}
+
+#cartItemCount {
+  position: absolute;
+  top: 6px;
+  left: 23px;
+  color: black;
+  padding: 5px;
+  border-radius: 50%;
+}
+
+.cart li img {
+  width: 18px; /* Ajustez la taille de l'image comme nécessaire */
+  height: 18px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+/* .cart li button:hover {
+  background-color: #bd2130;
+} */
+
+.largeCount {
+  margin-left: -4.5px;
+}
+/* Partie box setup */
+
+.setup1 {
+  background-color: rgba(238,174,202);
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup1_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup1 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup1_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup1 h2 {
+  margin:0;
+}
+
+.setup1 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup1_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup2 {
+  background-color: #E3B0CE;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup2_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup2 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup2_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup2 h2 {
+  margin:0;
+}
+
+.setup2 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup2_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup3 {
+  background-color: #D8B1D2;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup3_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup3 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup3_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup3 h2 {
+  margin:0;
+}
+
+.setup3 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup3_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup4 {
+  background-color: #CBB3D6;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup4_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup4 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup4_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup4 h2 {
+  margin:0;
+}
+
+.setup4 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup4_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup5 {
+  background-color: #C5B4DA;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup5_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup5 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup5_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup5 h2 {
+  margin:0;
+}
+
+.setup5 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup5_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup6 {
+  background-color: #BEB6DC;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup6_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup6 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup6_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup6 h2 {
+  margin:0;
+}
+
+.setup6 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup6_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup7 {
+  background-color: #B7B6DD;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup7_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup7 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup7_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup7 h2 {
+  margin:0;
+}
+
+.setup7 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup7_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup8 {
+  background-color: #B1B7E0;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup8_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup8 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup8_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup8 h2 {
+  margin:0;
+}
+
+.setup8 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup8_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup9 {
+  background-color: #A8B8E2;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup9_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup9 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup9_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup9 h2 {
+  margin:0;
+}
+
+.setup9 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup9_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+.setup10 {
+  background-color: #A8B8E2;
+  display: flex;
+  width: 1000px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.setup10_pic{
+  flex: 1;
+  max-width: 300px;
+}
+
+.setup10 img {
+  position: relative;
+  width: 85%;
+  height: 75%;
+  height: auto;
+  border-radius: 10px;
+  top:19px;
+  left:19px;
+}
+
+.setup10_infos{
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.setup10 h2 {
+  margin:0;
+}
+
+.setup10 p {
+  font-size: 1.2em;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.setup10_infos img{
+  position: relative;
+  width: 50px; 
+  height: auto; 
+  left:610px;
+  top:1px;
+}
+
+/* fin box setup */
