--- a/V_2/style.css
+++ b/V_2/style.css
@@ -1,4 +1,5 @@
 body{
+  font-family: 'inter',sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -351,133 +352,14 @@ display: block;
   display: none;
 }
 
-.filter-section {
-  position: relative;
+
+.text_pag h2{
+  text-align: center;
+  font-size: 1.7em;
+  margin-top: 50px;
 }
 
-#whiteCheckbox {
-  position: absolute;
-  top: 40px;
-  left: 0;
-}
 
-#blackCheckbox {
-  position: absolute;
-  top: 20px;
-  left: 0;
-}
-
-#allCheckbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.label-checkbox {
-  position: absolute;
-  top: 0;
-  left: 25px;
-}
-
-#whiteLabel {
-  top: 40px;
-}
-
-#blackLabel {
-  top: 20px;
-}
-
-#allLabel {
-  top: 0;
-}
-
-.res{
-  position: absolute;
-  top: 60px;
-  left: 0;
-}
-
-#firstCheckbox {
-  position: absolute;
-  top: 100px;
-  left: 0;
-}
-
-#secondCheckbox {
-  position: absolute;
-  top: 120px;
-  left: 0;
-}
-
-#thirdCheckbox {
-  position: absolute;
-  top: 140px;
-  left: 0;
-}
-
-#firstLabel {
-  top: 100px;
-}
-
-#secondLabel {
-  top: 120px;
-}
-
-#thirdLabel {
-  top: 140px;
-}
-
-.proc{
-  position: absolute;
-  top: 160px;
-  left: 0;
-}
-
-#ryzenCheckbox {
-  position: absolute;
-  top: 200px;
-  left: 0;
-}
-
-#intelCheckbox {
-  position: absolute;
-  top: 220px;
-  left: 0;
-}
-
-#ryzenLabel {
-  top: 200px;
-}
-
-#intelLabel {
-  top: 220px;
-}
-
-.gpu{
-  position: absolute;
-  top: 240px;
-  left: 0;
-}
-
-#nvidiaCheckbox {
-  position: absolute;
-  top: 280px;
-  left: 0;
-}
-
-#amdCheckbox {
-  position: absolute;
-  top: 300px;
-  left: 0;
-}
-
-#nvidiaLabel {
-  top: 280px;
-}
-
-#amdLabel {
-  top: 300px;
-}
 
 /* Partie box setup */
 
@@ -503,7 +385,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -555,7 +437,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -607,7 +489,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -659,7 +541,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -711,7 +593,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -763,7 +645,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -815,7 +697,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -867,7 +749,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -919,7 +801,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -971,7 +853,7 @@ display: block;
   height: 75%;
   height: auto;
   border-radius: 10px;
-  top:19px;
+  top:31px;
   left:19px;
 }
 
@@ -1000,5 +882,6 @@ display: block;
   left:610px;
   top:1px;
 }
+
 
 /* fin box setup */
