Footer + contact us et message de remerciement

--- a/V_2/style.css
+++ b/V_2/style.css
@@ -359,6 +359,40 @@ display: block;
   margin-top: 50px;
 }
 
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-section {
+  flex: 1;
+  padding: 10px;
+  max-width: 300px;
+}
+
+.footer-section h2 {
+  color: #ff9800; /* Couleur orange pour le titre */
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section li {
+  margin-bottom: 8px;
+}
+
 
 
 /* Partie box setup */
